--- a/blog/_posts/2026-01-01-2025-in-review.md
+++ b/blog/_posts/2026-01-01-2025-in-review.md
@@ -35,36 +35,37 @@ My current plan is to study the elliptic functions chapter but skip the last cha
 
 Here's a list of all the posts I wrote as notes from the book this year:
 
-* [The Maximum Principle](https://www.kuniga.me/blog/2025/01/18/max-principle.html)
-* [The General Form of Cauchy's Theorem](https://www.kuniga.me/blog/2025/03/15/general-cauchy.html)
-* [The Residue Theorem](https://www.kuniga.me/blog/2025/04/16/residue-theorem.html)
-* [Runge's Theorem](https://www.kuniga.me/blog/2025/05/31/runge-theorem.html)
-* [Mittag-Leffler's Theorem](https://www.kuniga.me/blog/2025/06/17/mittag-leffler-theorem.html)
-* [Weierstrass Factorization Theorem](https://www.kuniga.me/blog/2025/07/02/weierstrass-factorization-theorem.html)
-* [The Gamma Function](https://www.kuniga.me/blog/2025/07/19/gamma-function.html)
-* [Harmonic Functions](https://www.kuniga.me/blog/2025/08/01/harmonic-functions.html)
-* [Hadamard Factorization Theorem](https://www.kuniga.me/blog/2025/08/30/hadamard-theorem.html)
-* [The Riemann Zeta Function](https://www.kuniga.me/blog/2025/10/25/riemann-zeta-function.html)
-* [Subharmonic Functions](https://www.kuniga.me/blog/2025/12/14/subharmonic-functions.html)
+* [The Maximum Principle]({{blog}}/2025/01/18/max-principle.html)
+* [The General Form of Cauchy's Theorem]({{blog}}/2025/03/15/general-cauchy.html)
+* [The Residue Theorem]({{blog}}/2025/04/16/residue-theorem.html)
+* [Runge's Theorem]({{blog}}/2025/05/31/runge-theorem.html)
+* [Mittag-Leffler's Theorem]({{blog}}/2025/06/17/mittag-leffler-theorem.html)
+* [Weierstrass Factorization Theorem]({{blog}}/2025/07/02/weierstrass-factorization-theorem.html)
+* [The Gamma Function]({{blog}}/2025/07/19/gamma-function.html)
+* [Harmonic Functions]({{blog}}/2025/08/01/harmonic-functions.html)
+* [Hadamard Factorization Theorem]({{blog}}/2025/08/30/hadamard-theorem.html)
+* [The Riemann Zeta Function]({{blog}}/2025/10/25/riemann-zeta-function.html)
+* [Subharmonic Functions]({{blog}}/2025/12/14/subharmonic-functions.html)
+* [The Perron Method]({{blog}}/2025/12/31/perron-method.html)
 
 ### Work
 
-I learned more about C++ such as [Views](https://www.kuniga.me/blog/2025/01/25/vector-views-in-cpp.html), [Concepts](https://www.kuniga.me/blog/2025/08/17/cpp-concepts.html) and [CPOs](https://www.kuniga.me/blog/2025/09/10/cpo-in-cpp.html). I also studied Folly [futures](https://www.kuniga.me/blog/2025/05/02/folly-futures.html), [executors](https://www.kuniga.me/blog/2025/06/07/folly-executors.html), [coroutines](https://www.kuniga.me/blog/2025/06/18/folly-coroutines.html) and their [lifetimes](https://www.kuniga.me/blog/2025/11/01/coroutine-lifetimes.html). As a background for Folly executors I also studied [asynchronous I/O](https://www.kuniga.me/blog/2025/05/16/async-io.html).
+I learned more about C++ such as [Views]({{blog}}/2025/01/25/vector-views-in-cpp.html), [Concepts]({{blog}}/2025/08/17/cpp-concepts.html) and [CPOs]({{blog}}/2025/09/10/cpo-in-cpp.html). I also studied Folly [futures]({{blog}}/2025/05/02/folly-futures.html), [executors]({{blog}}/2025/06/07/folly-executors.html), [coroutines]({{blog}}/2025/06/18/folly-coroutines.html) and their [lifetimes]({{blog}}/2025/11/01/coroutine-lifetimes.html). As a background for Folly executors I also studied [asynchronous I/O]({{blog}}/2025/05/16/async-io.html).
 
-I studied how C++ binaries are compiled (in particular by [LLVM](https://www.kuniga.me/blog/2025/03/22/review-llvm-core-libs.html)), linked (via [shared libraries](https://www.kuniga.me/blog/2025/04/25/shared-libraries.html)) and executed ([ELF](https://www.kuniga.me/blog/2025/04/12/elf.html) and [jemalloc](https://www.kuniga.me/blog/2025/07/15/jemalloc.html)). More generally, I also had posts on distributed systems and operating systems: I wrote about [queues](https://www.kuniga.me/blog/2025/03/29/queues.html), read books on [microservices](https://www.kuniga.me/blog/2025/07/26/review-the-hard-parts.html), [system performance](https://www.kuniga.me/blog/2025/10/10/review-systems-performance.html) and [BPF](https://www.kuniga.me/blog/2025/12/28/book-bpf-performance-tools.html).
+I studied how C++ binaries are compiled (in particular by [LLVM]({{blog}}/2025/03/22/review-llvm-core-libs.html)), linked (via [shared libraries]({{blog}}/2025/04/25/shared-libraries.html)) and executed ([ELF]({{blog}}/2025/04/12/elf.html) and [jemalloc]({{blog}}/2025/07/15/jemalloc.html)). More generally, I also had posts on distributed systems and operating systems: I wrote about [queues]({{blog}}/2025/03/29/queues.html), read books on [microservices]({{blog}}/2025/07/26/review-the-hard-parts.html), [system performance]({{blog}}/2025/10/10/review-systems-performance.html) and [BPF]({{blog}}/2025/12/28/book-bpf-performance-tools.html).
 
 I'm satisfied about being able to read so many technical books this year. I did this by reserving 30-60 min each morning to reading, and got through 4 books amounting to a few thousands of pages. I applied some techniques described in [Atomic Habits](https://www.kuniga.me/books/atomic-habits): I comitted to read at least one page a day and more importantly I started using a new phone without any work related nor social media apps. It's incredible how much time I had been wasting each morning on those.
 
 
 ### Leisure
 
-I didn't explore much outside of work and complex analysis but I enjoyed writing about my last visit to the [Computer History Museum](https://www.kuniga.me/blog/2025/02/07/computer-history-museum.html).
+I didn't explore much outside of work and complex analysis but I enjoyed writing about my last visit to the [Computer History Museum]({{blog}}/2025/02/07/computer-history-museum.html).
 
 I belatedly completed the [Advent of Code](https://adventofcode.com/2024) *2024*. It was a fun experience and I started writing a post about the problems but didn't have time to finish.
 
 ### Personal
 
-I wrote more "shower-thoughts" / personal opinion posts about [neomania](https://www.kuniga.me/blog/2025/01/11/neomania.html), [horseshoe theory](https://www.kuniga.me/blog/2025/08/24/horseshoe-theory.html) and [complex systems](https://www.kuniga.me/blog/2025/12/20/complex-systems.html). A bit short of my plan of writing once a quarter but I've enjoyed working on these and hope to continue next year.
+I wrote more "shower-thoughts" / personal opinion posts about [neomania]({{blog}}/2025/01/11/neomania.html), [horseshoe theory]({{blog}}/2025/08/24/horseshoe-theory.html) and [complex systems]({{blog}}/2025/12/20/complex-systems.html). A bit short of my plan of writing once a quarter but I've enjoyed working on these and hope to continue next year.
 
 ## The Blog in 2025
 
@@ -73,9 +74,9 @@ I wrote more "shower-thoughts" / personal opinion posts about [neomania](https:/
 I've been having a resolution to have at least one post a month on average but this year I actually averaged more than one post every other week, by writing {{posts_last_year}} of them. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 I still use [GoatCounter](https://www.goatcounter.com/) for analytics. The tool [A Bulls and Cows Solver](https://www.kuniga.me/bulls_and_cows/)
-continues to be the most visited page with 4,744 visits. This is a solver I built for fun in 2018 as part of a post, [Bulls and Cows](https://www.kuniga.me/blog/2018/06/04/bulls-and-cows.html), which is a code-breaking 2-player game. I explain why this page in popular in my [2024 review](https://www.kuniga.me/blog/2025/01/01/2024-in-review.html).
+continues to be the most visited page with 4,744 visits. This is a solver I built for fun in 2018 as part of a post, [Bulls and Cows]({{blog}}/2018/06/04/bulls-and-cows.html), which is a code-breaking 2-player game. I explain why this page in popular in my [2024 review]({{blog}}/2025/01/01/2024-in-review.html).
 
-Restricted to the blog, [Linear Predictive Coding in Python]({{blog}}/2021/05/13/lpc-in-python.html) written in 2021 continues to be the most popular post with 654 visits. Surprisingly, a post I wrote in 2024, [Understanding std::call_once() in C++](https://www.kuniga.me/blog/2024/03/01/understanding-call-once-in-cpp.html) became quite popular with 571 visits. From this year, [Folly Executors](https://www.kuniga.me/blog/2025/06/07/folly-executors.html) had the most visits, 119.
+Restricted to the blog, [Linear Predictive Coding in Python]({{blog}}/2021/05/13/lpc-in-python.html) written in 2021 continues to be the most popular post with 654 visits. Surprisingly, a post I wrote in 2024, [Understanding std::call_once() in C++]({{blog}}/2024/03/01/understanding-call-once-in-cpp.html) became quite popular with 571 visits. From this year, [Folly Executors]({{blog}}/2025/06/07/folly-executors.html) had the most visits, 119.
 
 Overall traffic to my website grew by a tiny amount, from 17,098 to 17,145.
 
@@ -88,7 +89,7 @@ I actually don't mind this change in pattern too much. I never wrote with visits
 ### Citations
 
 From time to time I Google my blog address to see if I can find any interesting references and this time I found it has been cited by a paper by folks at Purdue: [Unbalanced optimal transport for stochastic particle tracking
-](https://arxiv.org/abs/2407.04583). I couldn't find it in any journal and it doesn't seem peer reviewed, but it cites a 2013 post [Totally Unimodular Matrix Recognition](https://www.kuniga.me/blog/2013/08/13/totally-unimodular-matrix-recognition.html).
+](https://arxiv.org/abs/2407.04583). I couldn't find it in any journal and it doesn't seem peer reviewed, but it cites a 2013 post [Totally Unimodular Matrix Recognition]({{blog}}/2013/08/13/totally-unimodular-matrix-recognition.html).
 
 Most of my posts do not provide original ideas, being just notes on books and papers I read, so I'm surprised that anyone would cite it instead of the original source directly, but then most textbooks are also not original (in content, but are in presentation) often sourcing from papers and still, many papers cite textbooks.
 
@@ -96,7 +97,7 @@ Most of my posts do not provide original ideas, being just notes on books and pa
 
 As I mentioned above, I'll commit to finish learning about complex analysis. I'm hoping to have time to start a new topic, which for now is [classical mechanics](https://en.wikipedia.org/wiki/Classical_mechanics).
 
-I also want to explore more LLM tools such as Claude. The landscape has been changing very fast and I find hard to be on top of the best tools, so I want to dedicate time to explore them in more depth. I usually don't follow the [newest trends](https://www.kuniga.me/blog/2025/01/11/neomania.html) but this might time well-spent because it can make me more efficient and end up saving time in the long run.
+I also want to explore more LLM tools such as Claude. The landscape has been changing very fast and I find hard to be on top of the best tools, so I want to dedicate time to explore them in more depth. I usually don't follow the [newest trends]({{blog}}/2025/01/11/neomania.html) but this might time well-spent because it can make me more efficient and end up saving time in the long run.
 
 ## Personal
 
@@ -136,7 +137,7 @@ In February, we visited Singapore and Vietnam. It was my first time in Southeast
     </figcaption>
 </figure>
 
-In November after a business trip to London, we decided to visit Morocco. I also learned a lot about Morocco's [history](https://www.kuniga.me/docs/history/morocco ) and was fascinated by its Islamic architecture, especially the tile work (zelije). It was a nice historical connection to the trip to [Andalucia last year](https://www.kuniga.me/blog/2025/01/01/2024-in-review.html) because the Moors from Andalucia came from Morocco.
+In November after a business trip to London, we decided to visit Morocco. I also learned a lot about Morocco's [history](https://www.kuniga.me/docs/history/morocco ) and was fascinated by its Islamic architecture, especially the tile work (zelije). It was a nice historical connection to the trip to [Andalucia last year]({{blog}}/2025/01/01/2024-in-review.html) because the Moors from Andalucia came from Morocco.
 
 <figure class="center_children">
     <img src="{{resources_path}}/morocco.png" alt="a collage of photos from a trip to Morocco"/>
@@ -181,7 +182,7 @@ With similar hopes I read the book [A Lady's Life in the Rocky Mountains](https:
 ### STEM
 
 I haven't explicitly bought books on science in a while but I try to read those I get as gifts, such as [The Body](https://www.kuniga.me/books/the-body) by Bill Bryson. I also re-read [The Music of the Primes](https://www.kuniga.me/books/the-music-of-the-primes) which I had read over a decade ago. I knew it was about the Riemann Hypothesis, and I wanted to revisit it after studying [The Riemann Zeta Function
-](https://www.kuniga.me/blog/2025/10/25/riemann-zeta-function.html).
+]({{blog}}/2025/10/25/riemann-zeta-function.html).
 
 I also read the biography of von Neumann, [The Man from the Future](https://www.kuniga.me/books/the-man-from-the-future). I like learning about the history of mathematics, so I wanted to see if I'd enjoy reading biographies of mathematicians. It was an interesting but not an amazing read, so not sure I want to make a habit of it.
 
