--- a/blog/_posts/2026-01-01-2025-in-review.md
+++ b/blog/_posts/2026-01-01-2025-in-review.md
@@ -181,7 +181,7 @@ With similar hopes I read the book [A Lady's Life in the Rocky Mountains](https:
 
 ### STEM
 
-I haven't explicitly bought books on science in a while but I try to read those I get as gifts, such as [The Body](https://www.kuniga.me/books/the-body) by Bill Bryson. I also re-read [The Music of the Primes](https://www.kuniga.me/books/the-music-of-the-primes) which I had read over a decade ago. I knew it was about the Riemann Hypothesis, and I wanted to revisit it after studying [The Riemann Zeta Function
+I read [The Body](https://www.kuniga.me/books/the-body) which covers  interesting bits about the human body. I also re-read [The Music of the Primes](https://www.kuniga.me/books/the-music-of-the-primes) which I had read over a decade ago. I knew it was about the Riemann Hypothesis, and I wanted to revisit it after studying [The Riemann Zeta Function
 ]({{blog}}/2025/10/25/riemann-zeta-function.html).
 
 I also read the biography of von Neumann, [The Man from the Future](https://www.kuniga.me/books/the-man-from-the-future). I like learning about the history of mathematics, so I wanted to see if I'd enjoy reading biographies of mathematicians. It was an interesting but not an amazing read, so not sure I want to make a habit of it.
