--- a/blog/_posts/2026-01-01-2025-in-review.md
+++ b/blog/_posts/2026-01-01-2025-in-review.md
@@ -157,7 +157,7 @@ We also did quick trips to Portland, Oregon and Denver, Colorado when I visited 
 
 ### Books
 
-This year I started to write down my notes for books as soon as I finish them. In fact from now on I don't consider a book read until I write down the note. The list of all books I read this year is now on my [books page](https://www.kuniga.me/books/). In this post I'll make some overall commentary.
+This year I started publishing the notes for books I read as soon as I finish them. In fact from now on I don't consider a book read until I do that. The list of all books I read this year is now on my [books page](https://www.kuniga.me/books/). In this post I'll make some overall commentary.
 
 #### Fiction and Poetry
 
