--- a/blog/_posts/2026-01-01-2025-in-review.md
+++ b/blog/_posts/2026-01-01-2025-in-review.md
@@ -165,9 +165,9 @@ This year I read more fiction than usual, in particular sci-fi. Recommended by a
 
 I initially didn't enjoy reading Borges' [Ficciones](https://www.kuniga.me/books/ficciones) because I couldn't grok the heavily philosophical first story but the subsequent ones were pretty interesting. Also, after reading the entries on Wikipedia I realized there were many other layers I had missed. I especially liked the *Tower of Babel*.
 
-Other fictions I read were [The Tempest](https://www.kuniga.me/books/the-tempest) and [Pachinko](https://www.kuniga.me/books/pachinko). The Tempest was the first text I read from Shakespare and found it underwhelmind. Pachinko was okay.
+Other fictions I read were [The Tempest](https://www.kuniga.me/books/the-tempest) and [Pachinko](https://www.kuniga.me/books/pachinko). The Tempest was the first text I read from Shakespeare and found it underwhelming. Pachinko was okay.
 
-I read my first book in Spanish, [Romancero Gitano](https://www.kuniga.me/books/romancero-gitano), a poetry book with very involved metaphores. It would have been hard to understand this book even in my mother language, buck luckily it has lots of comments.
+I read my first book in Spanish, [Romancero Gitano](https://www.kuniga.me/books/romancero-gitano), a poetry book with very involved metaphors. It would have been hard to understand this book even in my mother language, but luckily it has lots of comments.
 
 #### History and Travel
 
