--- a/blog/_posts/2026-01-01-2025-in-review.md
+++ b/blog/_posts/2026-01-01-2025-in-review.md
@@ -71,7 +71,7 @@ I wrote more "shower-thoughts" / personal opinion posts about [neomania]({{blog}
 
 ### Numbers
 
-I've been having a resolution to have at least one post a month on average but this year I actually averaged more than one post every other week, by writing {{posts_last_year}} of them. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
+I've have a resolution to post at least once a month on average but this year I actually averaged more than one post every other week, by writing {{posts_last_year}} of them. The blog completed {{blog_age}} years with {{posts_so_far}} posts.
 
 I still use [GoatCounter](https://www.goatcounter.com/) for analytics. The tool [A Bulls and Cows Solver](https://www.kuniga.me/bulls_and_cows/)
 continues to be the most visited page with 4,744 visits. This is a solver I built for fun in 2018 as part of a post, [Bulls and Cows]({{blog}}/2018/06/04/bulls-and-cows.html), which is a code-breaking 2-player game. I explain why this page in popular in my [2024 review]({{blog}}/2025/01/01/2024-in-review.html).
@@ -153,7 +153,7 @@ In November after a business trip to London, we decided to visit Morocco. I also
     </figcaption>
 </figure>
 
-We also did quick trips to Portland, Oregon and Denver, Colorado when I visited the Rocky Mountain National Park.
+We also did quick trips to Portland, Oregon and Denver and the Rocky Mountain National Park in Colorado.
 
 ### Books
 
@@ -179,13 +179,13 @@ I did just this for [Morocco](https://www.kuniga.me/docs/history/morocco). I rea
 
 With similar hopes I read the book [A Lady's Life in the Rocky Mountains](https://www.kuniga.me/books/a-ladys-life-in-the-rocky-mountains) for a trip to Colorado and [Portlandness](https://www.kuniga.me/books/portlandness) for Portland. The former wasn't very insightful, but the latter did provide some interesting cultural background to Portland and I enjoyed the data viz from it.
 
-### STEM
+#### STEM
 
 I read [The Body](https://www.kuniga.me/books/the-body) which covers  interesting bits about the human body. I also re-read [The Music of the Primes](https://www.kuniga.me/books/the-music-of-the-primes) which I had read over a decade ago. I knew it was about the Riemann Hypothesis, and I wanted to revisit it after studying [The Riemann Zeta Function
 ]({{blog}}/2025/10/25/riemann-zeta-function.html).
 
 I also read the biography of von Neumann, [The Man from the Future](https://www.kuniga.me/books/the-man-from-the-future). I like learning about the history of mathematics, so I wanted to see if I'd enjoy reading biographies of mathematicians. It was an interesting but not an amazing read, so not sure I want to make a habit of it.
 
-### Psychology
+#### Psychology
 
 I enjoyed reading some books on self-improvement such as [The Almanack by Naval Ravikant](https://www.kuniga.me/books/the-almanack-of-naval-ravikant), [Nonviolent Communication](https://www.kuniga.me/books/nonviolent-communication) and [Atomic Habits](https://www.kuniga.me/books/atomic-habits) (re-read).
