--- a/blog/_posts/2026-02-10-bpf-cpp.md
+++ b/blog/_posts/2026-02-10-bpf-cpp.md
@@ -14,7 +14,7 @@ excerpt_separator: <!--more-->
 
 I learned a lot about BPF tools after reading the book [BPF Performance Tools](https://www.kuniga.me/blog/2025/12/28/book-bpf-performance-tools.html) by Brendan Gregg. The book focused mostly on performance analysis at a lower level, either through kernel functions or libraries such as libc.
 
-I wanted to leverage BPF at the application layer, in particular in C++. The book offers covers C++ very briefly in *Chapter 12* and *Chapter 13* provides an example of analyzing a MySQL database but still, most of the examples assume the implementation being in C.
+I wanted to leverage BPF at the application layer, in particular in C++. The book covers C++ very briefly in *Chapter 12* and *Chapter 13* provides an example of analyzing a MySQL database but still, most of the examples assume the implementation being in C.
 
 In this post want to investigate how to inspect C++ applications.
 
@@ -22,7 +22,7 @@ In this post want to investigate how to inspect C++ applications.
 
 ## Dynamic Probes
 
-Let's start with dynamic probes. As we explained in [1], these are probes we can attach to functions without having to recompile the code. Since we're only interested in user space, we'll use `uprobes`.
+Let's start with dynamic probes. As we explained in [1], these are probes we can attach to without having to recompile the code. Since we're only interested in user space, we'll use `uprobes`.
 
 ### Functions
 
@@ -154,6 +154,8 @@ uprobe:./fibo_class:_ZN4Fibo3runEi { @h = hist(arg1); }
 
 interval:s:2 { exit(); }
 {% endhighlight %}
+
+<br />
 
 ### STL Strings
 
