add more sections

--- a/blog/_posts/2026-02-14-on-ai.md
+++ b/blog/_posts/2026-02-14-on-ai.md
@@ -20,7 +20,7 @@ In this post I'd like to share my thoughts on coding with AI and how it has affe
 
 ## A New Era
 
-I kept hearing leadership saying AI would fundamentally change how we work and I was initially dismissing it as hyperbolic but then I started using Claude skills. I started getting value from it even before the introduction of Opus 4.5: I created a skill to carry out a refactoring that would have taken me days, and it finished the work in a couple of hours with little interaction needed from me.
+I kept hearing leadership saying AI would fundamentally change how we work and I was initially dismissing it as hyperbolic but then I started using Claude skills last December. I started getting value from it even before the introduction of Opus 4.5: I created a skill to carry out a refactoring that would have taken me days, and it finished the work in a couple of hours with little interaction needed from me.
 
 Now I'm at a point where I don't type code in the editor anymore, and do everything through Claude code or the terminal. I plan to write more details on how I use AI for my day-to-day work in a separate post.
 
@@ -66,6 +66,14 @@ The senior engineer who typically delegates more concrete tasks to junior engine
 My prediction is that the more AI advances, the more it will benefit higher level engineers. I expect it will widen the impact gap between the different levels and I wonder if this will reflect in compensation. This might also expose high-level engineers that are only good at people skills but not good at engineering, because now they might be expected to produce concrete output, even if prototypes.
 
 We'll see. I'm part anxious, part excited about how things will change in the next year or so.
+
+## Mind the Gap
+
+Speaking of widening the impact gap, I expect that -- at least while things are being figured out -- some people will be vastly more productive with AI than others. Without AI, the ratio of the fastest typer vs. the slowest one is probably not much more than 2x. It's said that the mythical 10x engineer is often more efficient because they choose to solve a problem in a different way or realize the problem does not need to be solved. However, it's really hard to prove this efficiency objectively.
+
+With AI, someone skilled at prompting might be able to orchestrate a large project without intervention. They might get it churning during sleep hours or weekends. And I think this could lead to a 100x difference between the most productive and least productive person, at least until tools mature.
+
+Now that prototyping is cheap, people can also be compared more objectively. They could have team A and B compete to work on a major project in parallel, with different approaches. Someone from a different team might vibe code your project during a weekend because they're most skilled at prompting. This is pretty anxiety-inducing and also plays into overwork (see *Overwork* above).
 
 ## Context Switching
 
