add back reference

--- a/blog/_posts/2020-03-07-sockets.md
+++ b/blog/_posts/2020-03-07-sockets.md
@@ -209,3 +209,5 @@ I probably wrote code using sockets a long time ago. I didn't have time to dig d
 * [Domestic server using Raspberry Pi]({{site.url}}/blog/2017/01/16/domestic-server-using-raspberry-pi.html) - also talks about IP
 * [HTTP Basics]({{site.url}}/blog/2016/01/18/http-basics.html) - no specific overlap, but related since HTTP is usually built on top of TCP/IP
 * [Haskell Basic Networking]({{site.url}}/blog/2015/10/26/haskell-basic-networking.html) - pretty much the same idea, but focused on implementing it in Haskell instead. This post focus more on the concepts and uses C.
+
+Mentioned by [Local Inter-Process Communication]({{blog}}/2024/12/07/local-ipc.html).
