--- a/blog/_posts/2020-04-24-cpu-cache.md
+++ b/blog/_posts/2020-04-24-cpu-cache.md
@@ -318,6 +318,9 @@ We can see that L3 can be roughly 10x slower than L1. To compare apples to apple
 * [Browser Performance]({{site.url}}/blog/2020/03/28/browser-performance.html) - This is relevant to timing attacks - memory access is relatively slow, but still very fast in absolute terms. The Appendix A above calculates the latency on the order of 100ns. To be able to determine if the data was cached, the measurement has to have high-precision. To help reducing this vulnerability, browser purposefully reduce the precision of APIs such `performance.now()` .
  
 
+
+Mentioned by [Buddy Memory Allocation]({{blog}}/2020/07/31/buddy-memory-allocation.html).
+
 ## References
 
 * [[1](https://en.wikipedia.org/wiki/CPU_cache)] Wikipedia - CPU cache
