--- a/blog/_posts/2024-12-07-local-ipc.md
+++ b/blog/_posts/2024-12-07-local-ipc.md
@@ -482,6 +482,8 @@ lrwx------ 1 kunigami users 64 Dec  1 12:11 3 -> /dev/shm/example_shm
 
 Or simply do `lsof -p <PID>`.
 
+Mentioned by [Shared Libraries]({{blog}}/2025/04/25/shared-libraries.html).
+
 ## References
 {:.no_toc}
 
