--- a/blog/_posts/2025-03-29-queues.md
+++ b/blog/_posts/2025-03-29-queues.md
@@ -65,6 +65,10 @@ When the queue is between processing units on the same machine, it uses memory. 
 When the machine is restarted there's an ever increasing backlog to catch up and it can become a negative feedback loop. Overprovisioning for peak memory helps but it can be wasteful.
 
 
+## Related Posts
+
+Mentioned by [[Book] Kafka: The Definitive Guide]({{blog}}/2026/01/17/book-kafka.html).
+
 ## Conclusion
 
 We covered some pros and cons of using queues. In my experience, using queues between machines is often beneficial (e.g. in a [MapReduce](https://en.wikipedia.org/wiki/MapReduce) architecture), while for local queues the trade-off is harder. I find the observability part very useful.
